tests/baselines/reference/everyTypeWithAnnotationAndInvalidInitializer.errors.txt
everyTypeWithAnnotationAndInvalidInitializer.ts(34,23): error TS2322: Type 'string' is not assignable to type 'number'.
everyTypeWithAnnotationAndInvalidInitializer.ts(35,23): error TS2322: Type 'number' is not assignable to type 'string'.
everyTypeWithAnnotationAndInvalidInitializer.ts(36,19): error TS2322: Type 'number' is not assignable to type 'Date'.
everyTypeWithAnnotationAndInvalidInitializer.ts(38,19): error TS2322: Type 'number' is not assignable to type 'void'.
everyTypeWithAnnotationAndInvalidInitializer.ts(40,22): error TS2741: Property 'id' is missing in type 'D<unknown>' but required in type 'I'.
everyTypeWithAnnotationAndInvalidInitializer.ts(41,17): error TS2741: Property 'id' is missing in type 'D<unknown>' but required in type 'C'.
everyTypeWithAnnotationAndInvalidInitializer.ts(42,32): error TS2739: Type 'C' is missing the following properties from type 'D<string>': source, recurse, wrapped
everyTypeWithAnnotationAndInvalidInitializer.ts(43,26): error TS2322: Type '{ id: string; }' is not assignable to type 'I'.
  Types of property 'id' are incompatible.
    Type 'string' is not assignable to type 'number'.
everyTypeWithAnnotationAndInvalidInitializer.ts(44,44): error TS2322: Type 'C' is not assignable to type '{ id: string; }'.
  Types of property 'id' are incompatible.
    Type 'number' is not assignable to type 'string'.
everyTypeWithAnnotationAndInvalidInitializer.ts(46,27): error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.
everyTypeWithAnnotationAndInvalidInitializer.ts(47,46): error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.
everyTypeWithAnnotationAndInvalidInitializer.ts(48,25): error TS2322: Type '(x: string) => string' is not assignable to type '(x: string) => number'.
  Type 'string' is not assignable to type 'number'.
everyTypeWithAnnotationAndInvalidInitializer.ts(50,25): error TS2322: Type 'typeof N' is not assignable to type 'typeof M'.
  The types returned by 'new A()' are incompatible between these types.
    Property 'name' is missing in type 'N.A' but required in type 'M.A'.
everyTypeWithAnnotationAndInvalidInitializer.ts(51,27): error TS2741: Property 'name' is missing in type 'N.A' but required in type 'M.A'.
everyTypeWithAnnotationAndInvalidInitializer.ts(52,38): error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: number) => string'.
  Type 'boolean' is not assignable to type 'string'.


==== everyTypeWithAnnotationAndInvalidInitializer.ts (15 errors) ====
    interface I {
        id: number;
    }
    
    class C implements I {
        id: number;
    }
    
    class D<T>{
        source: T;
        recurse: D<T>;
        wrapped: D<D<T>>
    }
    
    function F(x: string): number { return 42; }
    function F2(x: number): boolean { return x < 42; }
    
    module M {
        export class A {
            name: string;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    module N {
        export class A {
            id: number;
        }
    
        export function F2(x: number): string { return x.toString(); }
    }
    
    var aNumber: number = 'this is a string';
                          ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    var aString: string = 9.9;
                          ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    var aDate: Date = 9.9;
                      ~~~
!!! error TS2322: Type 'number' is not assignable to type 'Date'.
    
    var aVoid: void = 9.9;
                      ~~~
!!! error TS2322: Type 'number' is not assignable to type 'void'.
    
    var anInterface: I = new D();
                         ~~~~~~~
!!! error TS2741: Property 'id' is missing in type 'D<unknown>' but required in type 'I'.
!!! related TS2728 everyTypeWithAnnotationAndInvalidInitializer.ts:2:5: 'id' is declared here.
    var aClass: C = new D();
                    ~~~~~~~
!!! error TS2741: Property 'id' is missing in type 'D<unknown>' but required in type 'C'.
!!! related TS2728 everyTypeWithAnnotationAndInvalidInitializer.ts:6:5: 'id' is declared here.
    var aGenericClass: D<string> = new C();
                                   ~~~~~~~
!!! error TS2739: Type 'C' is missing the following properties from type 'D<string>': source, recurse, wrapped
    var anObjectLiteral: I = { id: 'a string' };
                             ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ id: string; }' is not assignable to type 'I'.
!!! error TS2322:   Types of property 'id' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    var anOtherObjectLiteral: { id: string } = new C();
                                               ~~~~~~~
!!! error TS2322: Type 'C' is not assignable to type '{ id: string; }'.
!!! error TS2322:   Types of property 'id' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    
    var aFunction: typeof F = F2;
                              ~~
!!! error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    var anOtherFunction: (x: string) => number = F2;
                                                 ~~
!!! error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: string) => number'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    var aLambda: typeof F = (x) => 'a string';
                            ~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(x: string) => string' is not assignable to type '(x: string) => number'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    
    var aModule: typeof M = N;
                            ~
!!! error TS2322: Type 'typeof N' is not assignable to type 'typeof M'.
!!! error TS2322:   The types returned by 'new A()' are incompatible between these types.
!!! error TS2322:     Property 'name' is missing in type 'N.A' but required in type 'M.A'.
!!! related TS2728 everyTypeWithAnnotationAndInvalidInitializer.ts:20:9: 'name' is declared here.
    var aClassInModule: M.A = new N.A();
                              ~~~~~~~~~
!!! error TS2741: Property 'name' is missing in type 'N.A' but required in type 'M.A'.
!!! related TS2728 everyTypeWithAnnotationAndInvalidInitializer.ts:20:9: 'name' is declared here.
    var aFunctionInModule: typeof M.F2 = F2;
                                         ~~
!!! error TS2322: Type '(x: number) => boolean' is not assignable to type '(x: number) => string'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
    
    